# djs-quickembed

./: .gitignore  Cargo.toml  README.md
src/: discord.rs  lib.rs  template.rs
