[package]
name = "djs-quickembed"
description = "Quickly template discord.js embeds"
version = "0.1.0"
edition = "2021"
authors = ["HyperCodec"]
repository = "https://github.com/inflectrix/djs-quickembed"
license = "MIT"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.68"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
toml = "0.8.10"
wasm-bindgen = "0.2.91"
